# stockpyle

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  app.py  mkdocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
capytal/: base.py  cli.py  models.py  trader.py  utils.py
stockpyle/: algorithm.py  assets.py  cli.py  models.py  trader.py  transactions.py  utils.py
tests/: conftest.py  test_asset.py  test_base.py  test_package.py  test_trade_logging.py  test_transactions.py
