[metadata]
name = stockpyle
version = attr: stockpyle.VERSION
author = Joaquin Gabriel Franco
author_email = chino.franco@gmail.com
description = Python-based algorithmic trading bot
long_description = file: README.md, LICENSE
keywords = finance, trading
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find: 
python_requires = >=3.8
install_requires =
    yfinance
    pandas
    pandas_ta
    tqdm